@@ -12,6 +12,10 @@ cupt2 (2.0.0~beta2~) UNRELEASED; urgency=low
     - system/worker:
       - 'updateReleaseAndIndexData': release the lock only after post-actions
         are run.
+      - 'updateReleaseAndIndexData': honor the option
+        'apt::get::list-cleanup'. (Closes: #610285)
+    - config:
+      - Recognize the option 'apt::get::list-cleanup'.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 07 Mar 2011 12:09:47 +0200
 
